--- a/PlantaGUIFuentes/styles.css
+++ b/PlantaGUIFuentes/styles.css
@@ -31,6 +31,18 @@ input[type=file]::file-selector-button {
 	font-style: italic;
 }
 
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+th,
+td {
+	border: 1px solid #444;
+	padding: 8px;
+	text-align: center;
+}
+
 #app {
 	max-width: 64rem;
 	margin: 0 auto;
