--- a/PlantaGUIFuentes/styles.css
+++ b/PlantaGUIFuentes/styles.css
@@ -8,7 +8,7 @@
 
 body {
 	min-height: 100vh;
-	width: 100vw;
+	width: 100%;
 	font-family: 'Comic Neue', cursive;
 	background-color: #222222;
 	color: white;
@@ -23,7 +23,6 @@ input[type=file] {
 }
 
 input[type=file]::file-selector-button {
-	margin-right: 1rem;
 	border: none;
 	padding: 1rem 2rem;
 	color: black;
@@ -78,9 +77,91 @@ form>button:hover {
 	gap: .5rem;
 }
 
+.ganancia__container {
+	display: flex;
+	gap: 1rem;
+}
+
 .results__container {
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
 	margin-top: 2rem;
+}
+
+.hidden {
+	display: none !important;
+}
+
+.highlighted {
+	background-color: #9b870c;
+}
+
+.title__section {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1rem;
+}
+
+/* FORMULARIO */
+
+
+.form-container {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 10px;
+	padding: 1rem;
+}
+
+.form-label {
+	display: block;
+}
+
+.form-input {
+	width: 100%;
+	padding: 10px;
+	background-color: transparent;
+	color: white;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+
+.form-textarea {
+	height: 100px;
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	background-color: transparent;
+	color: white;
+	border-radius: 5px;
+	resize: vertical;
+}
+
+.span-full {
+	grid-column: 1 / span 2;
+}
+
+.button {
+	width: 50%;
+	margin: 0 auto;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.toggle__button {
+	background-color: #9b870c;
+	color: #fff;
+	border: none;
+	padding: 10px 20px;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.form-button:hover {
+	background-color: #0056b3;
 }
